--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -5,6 +5,6 @@
 #      or  GPL-2.0+ (http://opensource.org/licenses/gpl-license)
 #          with "runtime exception" (http://www.dune-project.org/license.html)
 # Authors:
-#   Felix Schindler (2016)
+#   Felix Schindler (2016 - 2017)
 
 add_subdirectory(doxygen)
