--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 # This file is part of the dune-xt-grid project:
 #   https://github.com/dune-community/dune-xt-grid
-# Copyright 2009-2017 dune-xt-grid developers and contributors. All rights reserved.
+# Copyright 2009-2017 dune-xt-functions developers and contributors. All rights reserved.
 # License: Dual licensed as BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
 #      or  GPL-2.0+ (http://opensource.org/licenses/gpl-license)
 #          with "runtime exception" (http://www.dune-project.org/license.html)
@@ -22,6 +22,7 @@ before_script:
     - printenv | \grep TRAVIS > ${ENV_FILE}
     - printenv | \grep encrypt >> ${ENV_FILE}
     - printenv | \grep TOKEN >> ${ENV_FILE}
+    - printenv | \grep TESTS >> ${ENV_FILE}
     - export DOCKER_RUN="docker run --env-file ${ENV_FILE} -v ${TRAVIS_BUILD_DIR}:/root/src/${MY_MODULE} ${IMAGE}"
 
 script:
@@ -51,7 +52,7 @@ env:
 
 matrix:
   include:
-    - env: DOCKER_TAG=gcc_full
-    - env: DOCKER_TAG=gcc_no_istl_no_disc
-    - env: DOCKER_TAG=gcc_no_disc
-    - env: DOCKER_TAG=clang_full
+      - env: DOCKER_TAG=gcc_full
+      - env: DOCKER_TAG=gcc_no_istl_no_disc
+      - env: DOCKER_TAG=gcc_no_disc
+      - env: DOCKER_TAG=clang_full
