--- a/.travis.yml
+++ b/.travis.yml
@@ -19,10 +19,7 @@ before_script:
     # get image with fallback to master branch of the super repo
     - docker pull ${IMAGE} || export IMAGE="dunecommunity/${MY_MODULE}-testing_${DOCKER_TAG}:master" ; docker pull ${IMAGE}
     - export ENV_FILE=${HOME}/env
-    - printenv | \grep TRAVIS > ${ENV_FILE}
-    - printenv | \grep encrypt >> ${ENV_FILE}
-    - printenv | \grep TOKEN >> ${ENV_FILE}
-    - printenv | \grep TESTS >> ${ENV_FILE}
+    - python ./.travis.make_env_file.py
     - export DOCKER_RUN="docker run --env-file ${ENV_FILE} -v ${TRAVIS_BUILD_DIR}:/root/src/${MY_MODULE} ${IMAGE}"
 
 script:
