--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 # This file is part of the dune-xt-la project:
 #   https://github.com/dune-community/dune-xt-la
-# Copyright 2009-2017 dune-xt-la developers and contributors. All rights reserved.
+# Copyright 2009-2017 dune-xt-functions developers and contributors. All rights reserved.
 # License: Dual licensed as BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
 #      or  GPL-2.0+ (http://opensource.org/licenses/gpl-license)
 #          with "runtime exception" (http://www.dune-project.org/license.html)
@@ -19,9 +19,7 @@ before_script:
     # get image with fallback to master branch of the super repo
     - docker pull ${IMAGE} || export IMAGE="dunecommunity/${MY_MODULE}-testing_${DOCKER_TAG}:master" ; docker pull ${IMAGE}
     - export ENV_FILE=${HOME}/env
-    - printenv | \grep TRAVIS > ${ENV_FILE}
-    - printenv | \grep encrypt >> ${ENV_FILE}
-    - printenv | \grep TOKEN >> ${ENV_FILE}
+    - python ./.travis.make_env_file.py
     - export DOCKER_RUN="docker run --env-file ${ENV_FILE} -v ${TRAVIS_BUILD_DIR}:/root/src/${MY_MODULE} ${IMAGE}"
 
 script:
@@ -51,7 +49,7 @@ env:
 
 matrix:
   include:
-    - env: DOCKER_TAG=gcc_full
-    - env: DOCKER_TAG=gcc_no_istl_no_disc
-    - env: DOCKER_TAG=gcc_no_disc
-    - env: DOCKER_TAG=clang_full
+      - env: DOCKER_TAG=gcc_full
+      - env: DOCKER_TAG=gcc_no_istl_no_disc
+      - env: DOCKER_TAG=gcc_no_disc
+      - env: DOCKER_TAG=clang_full
