[ci] increase to 4 test bins

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,16 +52,20 @@ matrix:
         - env: DOCKER_TAG=gcc_full TESTS=0
         - env: DOCKER_TAG=gcc_full TESTS=1
         - env: DOCKER_TAG=gcc_full TESTS=2
+        - env: DOCKER_TAG=gcc_full TESTS=3
     
         - env: DOCKER_TAG=gcc_no_istl_no_disc TESTS=0
         - env: DOCKER_TAG=gcc_no_istl_no_disc TESTS=1
         - env: DOCKER_TAG=gcc_no_istl_no_disc TESTS=2
+        - env: DOCKER_TAG=gcc_no_istl_no_disc TESTS=3
     
         - env: DOCKER_TAG=gcc_no_disc TESTS=0
         - env: DOCKER_TAG=gcc_no_disc TESTS=1
         - env: DOCKER_TAG=gcc_no_disc TESTS=2
+        - env: DOCKER_TAG=gcc_no_disc TESTS=3
     
         - env: DOCKER_TAG=clang_full TESTS=0
         - env: DOCKER_TAG=clang_full TESTS=1
         - env: DOCKER_TAG=clang_full TESTS=2
+        - env: DOCKER_TAG=clang_full TESTS=3
     
