--- a/dune/xt/functions/CMakeLists.txt
+++ b/dune/xt/functions/CMakeLists.txt
@@ -36,7 +36,7 @@ endif()
 dune_library_add_sources(dunextfunctions SOURCES ${lib_dune_xt_functions_sources})
 
 if(dune-pybindxi_FOUND)
-  dune_pybindxi_add_module(_functions bindings.cc)
+  dune_pybindxi_add_module(_functions EXCLUDE_FROM_ALL bindings.cc)
   target_link_dune_default_libraries(_functions)
   add_dune_alberta_flags(GRIDDIM 2 _functions)
   if (DUNE_XT_WITH_PYTHON_BINDINGS)
