[ci/test] add binning

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,15 @@ env:
 
 matrix:
   include:
-      - env: DOCKER_TAG=gcc_full
-      - env: DOCKER_TAG=gcc_no_istl_no_disc
-      - env: DOCKER_TAG=gcc_no_disc
-      - env: DOCKER_TAG=clang_full
+        - env: DOCKER_TAG=gcc_full TESTS=0
+        - env: DOCKER_TAG=gcc_full TESTS=1
+    
+        - env: DOCKER_TAG=gcc_no_istl_no_disc TESTS=0
+        - env: DOCKER_TAG=gcc_no_istl_no_disc TESTS=1
+    
+        - env: DOCKER_TAG=gcc_no_disc TESTS=0
+        - env: DOCKER_TAG=gcc_no_disc TESTS=1
+    
+        - env: DOCKER_TAG=clang_full TESTS=0
+        - env: DOCKER_TAG=clang_full TESTS=1
+    
