--- a/.pylicense-other.cfg
+++ b/.pylicense-other.cfg
@@ -10,12 +10,12 @@
 [header]
 name = This file is part of the dune-xt-la project:
 url = https://github.com/dune-community/dune-xt-la
-copyright_statement = Copyright 2009-2017 dune-xt-la developers and contributors. All rights reserved.
+copyright_statement = Copyright 2009-2018 dune-xt-la developers and contributors. All rights reserved.
 license = Dual licensed as BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
           #      or  GPL-2.0+ (http://opensource.org/licenses/gpl-license)
           #          with "runtime exception" (http://www.dune-project.org/license.html)
 prefix = #
 
 [files]
-include_patterns = *.txt *.cmake *.py *.sh *.bash *.md *.dgf *.msh *.gdb *.cfg *.travis.* *.gitignore *.mailmap *.gitattributes *gitignore-* *stamp-vc *dune.module *Doxylocal *.clang-format *COPYING-CMAKE-SCRIPTS *README *LICENSE *mainpage *switch-build_dir *dune-xt-la.pc.in *CMakeLists.txt
+include_patterns = *.txt *.cmake *.py *.sh *.bash *.dgf *.msh *.gdb *.cfg *.travis.* *.gitignore *.mailmap *.gitattributes *gitignore-* *stamp-vc *dune.module *Doxylocal *.clang-format *COPYING-CMAKE-SCRIPTS *README *LICENSE *mainpage *switch-build_dir *dune-xt-la.pc.in *CMakeLists.txt
 exclude_patterns = *config.h.cmake *.vcsetup*
