[py] rewire setup
https://github.com/dune-community/dune-xt-common/pull/48

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,15 +44,12 @@ make_dependent_modules_sys_included()
 add_subdirectory(dune)
 add_subdirectory(doc)
 
+# this symlinks all files in python/ to the binary dir and install into the virtualenv from there
+# thereby making the compiled extensions directly usable from the venv
 if(dune-pybindxi_FOUND)
-  foreach(_file
-          dune/__init__.py
-          dune/xt/__init__.py
-          dune/xt/grid/__init__.py
-         )
-  execute_process(COMMAND ln -s ${CMAKE_CURRENT_SOURCE_DIR}/python/${_file} ${CMAKE_CURRENT_BINARY_DIR}/${_file})
-  endforeach()
+  add_subdirectory(python)
 endif()
+dune_xt_install_python_package(PATH python)
 
 # enable headercheck
 add_definitions("-DENABLE_HEADERCHECK=1")
