--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,12 +44,15 @@ make_dependent_modules_sys_included()
 add_subdirectory(dune)
 add_subdirectory(doc)
 
+include(DuneXTInstallPythonPackage)
 # this symlinks all files in python/ to the binary dir and install into the virtualenv from there
 # thereby making the compiled extensions directly usable from the venv
+dune_xt_install_python_package(PATH python)
+include_dependent_binary_python_dirs()
+# do not change order here
 if(dune-pybindxi_FOUND)
   add_subdirectory(python)
 endif()
-dune_xt_install_python_package(PATH python)
 
 # enable headercheck
 add_definitions("-DENABLE_HEADERCHECK=1")
