--- a/python/dune/xt/CMakeLists.txt
+++ b/python/dune/xt/CMakeLists.txt
@@ -1,3 +1,3 @@
 
 dune_pybindxi_add_module(_grid EXCLUDE_FROM_ALL bindings.cc boundaryinfo.bindings.cc)
-#add_dune_alberta_flags(GRIDDIM 2 _grid)
+add_dune_alberta_flags(GRIDDIM 2 _grid)
