--- a/.travis.yml
+++ b/.travis.yml
@@ -58,30 +58,44 @@ stages:
 jobs:
   include:
   - stage: test_cpp
-    env: DOCKER_TAG=gcc_full TESTS=0
+    env: DOCKER_TAG=debian_gcc_full TESTS=0
   - stage: test_cpp
-    env: DOCKER_TAG=gcc_full TESTS=1
+    env: DOCKER_TAG=debian_gcc_full TESTS=1
   - stage: test_cpp
-    env: DOCKER_TAG=gcc_full TESTS=2
+    env: DOCKER_TAG=debian_gcc_full TESTS=2
   - stage: test_cpp
-    env: DOCKER_TAG=gcc_full TESTS=3
+    env: DOCKER_TAG=debian_gcc_full TESTS=3
     
   - stage: test_cpp
-    env: DOCKER_TAG=clang_full TESTS=0
+    env: DOCKER_TAG=debian_clang_full TESTS=0
   - stage: test_cpp
-    env: DOCKER_TAG=clang_full TESTS=1
+    env: DOCKER_TAG=debian_clang_full TESTS=1
   - stage: test_cpp
-    env: DOCKER_TAG=clang_full TESTS=2
+    env: DOCKER_TAG=debian_clang_full TESTS=2
   - stage: test_cpp
-    env: DOCKER_TAG=clang_full TESTS=3
+    env: DOCKER_TAG=debian_clang_full TESTS=3
+    
+  - stage: test_cpp
+    env: DOCKER_TAG=arch_gcc_full TESTS=0
+  - stage: test_cpp
+    env: DOCKER_TAG=arch_gcc_full TESTS=1
+  - stage: test_cpp
+    env: DOCKER_TAG=arch_gcc_full TESTS=2
+  - stage: test_cpp
+    env: DOCKER_TAG=arch_gcc_full TESTS=3
     
   - stage: test_python
-    env: DOCKER_TAG=gcc_full
+    env: DOCKER_TAG=debian_gcc_full
     script: ${DOCKER_RUN} /root/src/dune-xt-functions/.travis.test_python.bash
     # overwrite other global/matrix settings
     after_script: true
   - stage: test_python
-    env: DOCKER_TAG=clang_full
+    env: DOCKER_TAG=debian_clang_full
+    script: ${DOCKER_RUN} /root/src/dune-xt-functions/.travis.test_python.bash
+    # overwrite other global/matrix settings
+    after_script: true
+  - stage: test_python
+    env: DOCKER_TAG=arch_gcc_full
     script: ${DOCKER_RUN} /root/src/dune-xt-functions/.travis.test_python.bash
     # overwrite other global/matrix settings
     after_script: true
