[cmake] fix alberta linking

--- a/dune/xt/functions/test/CMakeLists.txt
+++ b/dune/xt/functions/test/CMakeLists.txt
@@ -24,11 +24,9 @@ if(DEFINED ENV{TRAVIS})
 endif(DEFINED ENV{TRAVIS})
 
 foreach (test ${dxt_test_binaries})
-  if (${test} MATCHES alberta_1d)
-    add_dune_alberta_flags(GRIDDIM 1 ${test})
-  elseif (${test} MATCHES alberta_2d)
+  if (${test} MATCHES 2d_simplex_alberta)
     add_dune_alberta_flags(GRIDDIM 2 ${test})
-  elseif (${test} MATCHES alberta_3d)
+  elseif (${test} MATCHES 3d_simplex_alberta)
     add_dune_alberta_flags(GRIDDIM 3 ${test})
   endif()
 endforeach()
