--- a/cmake/modules/CMakeLists.txt
+++ b/cmake/modules/CMakeLists.txt
@@ -1,3 +1,13 @@
+# ~~~
+# This file is part of the dune-xt-grid project:
+#   https://github.com/dune-community/dune-xt-grid
+# Copyright 2009-2018 dune-xt-grid developers and contributors. All rights reserved.
+# License: Dual licensed as BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
+# Authors:
+#   Felix Schindler (2016 - 2017)
+#   Rene Milk       (2018)
+# ~~~
+
     # This file is part of the dune-xt-grid project:
 #   https://github.com/dune-community/dune-xt-grid
 # Copyright 2009-2018 dune-xt-grid developers and contributors. All rights reserved.
