--- a/python/dune/xt/CMakeLists.txt
+++ b/python/dune/xt/CMakeLists.txt
@@ -1,2 +1,11 @@
+# ~~~
+# This file is part of the dune-xt-functions project:
+#   https://github.com/dune-community/dune-xt-functions
+# Copyright 2009-2018 dune-xt-functions developers and contributors. All rights reserved.
+# License: Dual licensed as BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
+# Authors:
+#   Rene Milk (2018)
+# ~~~
+
 dune_pybindxi_add_module(_functions EXCLUDE_FROM_ALL bindings.cc)
 add_dune_alberta_flags(GRIDDIM 2 _functions)
