[.pylicense-other.cfg] add builder_definitions.cmake to ignore list

--- a/.pylicense-other.cfg
+++ b/.pylicense-other.cfg
@@ -25,4 +25,4 @@ lead-out = # ~~~
 
 [files]
 include_patterns = *.txt *.cmake *.py *.sh *.bash *.msh *.gdb *.cfg *.travis.* *.gitignore *.mailmap *.gitattributes *gitignore-* *stamp-vc *dune.module *Doxylocal *.clang-format *COPYING-CMAKE-SCRIPTS *README *LICENSE *mainpage *switch-build_dir *dune-xt-grid.pc.in *.pylicense* *CMakeLists.txt
-exclude_patterns = *config.h.cmake *.vcsetup* *.dgf
+exclude_patterns = *config.h.cmake *.vcsetup* *.dgf *builder_definitions.cmake
