[py test] don't capture stdout

--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -34,7 +34,7 @@ python_files = test/*.py
 python_class = Test
 pep8maxlinelength = 120
 pep8ignore = E221,E226,E241,E242
-addopts= --cov dune/ -p no:warnings
+addopts= --cov dune/ -p no:warnings -s
 
 [metadata]
 # this is mandatory to lave license end up in .whl
