[cmake] add spe 10 download

--- a/dune/xt/functions/test/CMakeLists.txt
+++ b/dune/xt/functions/test/CMakeLists.txt
@@ -33,3 +33,32 @@ foreach (test ${dxt_test_binaries})
   endif()
 endforeach()
 
+# link spe10 data file if present
+if(NOT ${SPE10MODEL2DATA} STREQUAL "SPE10MODEL2DATA-NOTFOUND")
+  set(SPE10MODEL2DATA_TARGET_FILENAME "${CMAKE_CURRENT_BINARY_DIR}/perm_case2a.dat")
+  if(NOT EXISTS ${SPE10MODEL2DATA_TARGET_FILENAME})
+    execute_process(COMMAND ln -s "${SPE10MODEL2DATA}" "${SPE10MODEL2DATA_TARGET_FILENAME}")
+  endif(NOT EXISTS ${SPE10MODEL2DATA_TARGET_FILENAME})
+else(NOT ${SPE10MODEL2DATA} STREQUAL "SPE10MODEL2DATA-NOTFOUND")
+  file(DOWNLOAD https://www.uni-muenster.de/AMM/mirror/spe10/model2/por_perm_case2a.zip
+                ${CMAKE_CURRENT_BINARY_DIR}/por_perm_case2a.zip
+       SHOW_PROGRESS)
+  execute_process(COMMAND unzip -o por_perm_case2a.zip WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+  set(SPE10MODEL2DATA_TARGET_FILENAME "${CMAKE_CURRENT_BINARY_DIR}/perm_case2a.dat"
+      CACHE FILEPATH "spe10 model 2 data file")
+endif(NOT ${SPE10MODEL2DATA} STREQUAL "SPE10MODEL2DATA-NOTFOUND")
+
+# link spe10 data file if present
+if(NOT ${SPE10MODEL1DATA} STREQUAL "SPE10MODEL1DATA-NOTFOUND")
+  set(SPE10MODEL1DATA_TARGET_FILENAME "${CMAKE_CURRENT_BINARY_DIR}/perm_case1.dat")
+  if(NOT EXISTS ${SPE10MODEL1DATA_TARGET_FILENAME})
+    execute_process(COMMAND ln -s "${SPE10MODEL1DATA}" "${SPE10MODEL1DATA_TARGET_FILENAME}")
+  endif(NOT EXISTS ${SPE10MODEL1DATA_TARGET_FILENAME})
+else(NOT ${SPE10MODEL1DATA} STREQUAL "SPE10MODEL1DATA-NOTFOUND")
+  file(DOWNLOAD https://www.uni-muenster.de/AMM/mirror/spe10/model1/perm_case1.zip
+                ${CMAKE_CURRENT_BINARY_DIR}/perm_case1.zip
+       SHOW_PROGRESS)
+  execute_process(COMMAND unzip -o perm_case1.zip WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
+  set(SPE10MODEL1DATA_TARGET_FILENAME "${CMAKE_CURRENT_BINARY_DIR}/perm_case1.dat"
+      CACHE FILEPATH "spe10 model 1 data file")
+endif(NOT ${SPE10MODEL1DATA} STREQUAL "SPE10MODEL1DATA-NOTFOUND")
