[ci] update bincount

--- a/.travis.yml
+++ b/.travis.yml
@@ -68,6 +68,8 @@ jobs:
     env: DOCKER_TAG=debian_gcc_full TESTS=2
   - stage: test_cpp
     env: DOCKER_TAG=debian_gcc_full TESTS=3
+  - stage: test_cpp
+    env: DOCKER_TAG=debian_gcc_full TESTS=4
     
   - stage: test_cpp
     env: DOCKER_TAG=debian_clang_full TESTS=0
@@ -77,6 +79,8 @@ jobs:
     env: DOCKER_TAG=debian_clang_full TESTS=2
   - stage: test_cpp
     env: DOCKER_TAG=debian_clang_full TESTS=3
+  - stage: test_cpp
+    env: DOCKER_TAG=debian_clang_full TESTS=4
     
   - stage: test_cpp
     env: DOCKER_TAG=arch_gcc_full TESTS=0
@@ -86,6 +90,8 @@ jobs:
     env: DOCKER_TAG=arch_gcc_full TESTS=2
   - stage: test_cpp
     env: DOCKER_TAG=arch_gcc_full TESTS=3
+  - stage: test_cpp
+    env: DOCKER_TAG=arch_gcc_full TESTS=4
     
   - stage: test_python
     env: DOCKER_TAG=debian_gcc_full
