--- a/.pylicense-cpp.cfg
+++ b/.pylicense-cpp.cfg
@@ -3,12 +3,11 @@
 #   https://github.com/dune-community/dune-xt-functions
 # Copyright 2009-2018 dune-xt-functions developers and contributors. All rights reserved.
 # License: Dual licensed as BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
+#      or  GPL-2.0+ (http://opensource.org/licenses/gpl-license)
+#          with "runtime exception" (http://www.dune-project.org/license.html)
 # Authors:
 #   Felix Schindler (2016 - 2017)
 #   Rene Milk       (2018)
-#
-#      or  GPL-2.0+ (http://opensource.org/licenses/gpl-license)
-#          with "runtime exception" (http://www.dune-project.org/license.html)
 # ~~~
 
 [header]
@@ -16,8 +15,8 @@ name = This file is part of the dune-xt-functions project:
 url = https://github.com/dune-community/dune-xt-functions
 copyright_statement = Copyright 2009-2018 dune-xt-functions developers and contributors. All rights reserved.
 license = Dual licensed as BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)
-          //      or  GPL-2.0+ (http://opensource.org/licenses/gpl-license)
-          //          with "runtime exception" (http://www.dune-project.org/license.html)
+               or  GPL-2.0+ (http://opensource.org/licenses/gpl-license)
+                   with "runtime exception" (http://www.dune-project.org/license.html)
 prefix = //
 
 [files]
