add python module install code from xt-common
this is a workaround for the mpi4py dependency issue
where it cannot both be installed as a python subdir dep and
be present or cmake to find header install paths to add

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,5 +57,11 @@ add_subdirectory(dune)
 add_subdirectory(doc)
 add_subdirectory(cmake/modules)
 
+include(DuneXTInstallPythonPackage)
+# this symlinks all files in python/ to the binary dir and install into the virtualenv from there thereby making the
+# compiled extensions directly usable from the venv
+configure_file(python/setup.py.in ${CMAKE_CURRENT_BINARY_DIR}/python/setup.py)
+dune_xt_install_python_package(PATH python)
+
 # finalize the dune project, e.g. generating config.h etc.
 finalize_dune_project(GENERATE_CONFIG_H_CMAKE)
