--- a/.travis.yml
+++ b/.travis.yml
@@ -62,16 +62,22 @@ jobs:
     env: DOCKER_TAG=debian-unstable_gcc_full TESTS=0
   - stage: test_cpp
     env: DOCKER_TAG=debian-unstable_gcc_full TESTS=1
+  - stage: test_cpp
+    env: DOCKER_TAG=debian-unstable_gcc_full TESTS=2
     
   - stage: test_cpp
     env: DOCKER_TAG=debian_gcc_full TESTS=0
   - stage: test_cpp
     env: DOCKER_TAG=debian_gcc_full TESTS=1
+  - stage: test_cpp
+    env: DOCKER_TAG=debian_gcc_full TESTS=2
     
   - stage: test_cpp
     env: DOCKER_TAG=debian_clang_full TESTS=0
   - stage: test_cpp
     env: DOCKER_TAG=debian_clang_full TESTS=1
+  - stage: test_cpp
+    env: DOCKER_TAG=debian_clang_full TESTS=2
     
   - stage: test_python
     env: DOCKER_TAG=debian-unstable_gcc_full
