increase dune-functions bin count, ignore gcov errors

--- a/.travis.yml
+++ b/.travis.yml
@@ -70,6 +70,8 @@ jobs:
     env: DOCKER_TAG=debian-unstable_gcc_full TESTS=3
   - stage: test_cpp
     env: DOCKER_TAG=debian-unstable_gcc_full TESTS=4
+  - stage: test_cpp
+    env: DOCKER_TAG=debian-unstable_gcc_full TESTS=5
     
   - stage: test_cpp
     env: DOCKER_TAG=debian_gcc_full TESTS=0
@@ -81,6 +83,8 @@ jobs:
     env: DOCKER_TAG=debian_gcc_full TESTS=3
   - stage: test_cpp
     env: DOCKER_TAG=debian_gcc_full TESTS=4
+  - stage: test_cpp
+    env: DOCKER_TAG=debian_gcc_full TESTS=5
     
   - stage: test_cpp
     env: DOCKER_TAG=debian_clang_full TESTS=0
@@ -92,6 +96,8 @@ jobs:
     env: DOCKER_TAG=debian_clang_full TESTS=3
   - stage: test_cpp
     env: DOCKER_TAG=debian_clang_full TESTS=4
+  - stage: test_cpp
+    env: DOCKER_TAG=debian_clang_full TESTS=5
     
   - stage: test_python
     env: DOCKER_TAG=debian-unstable_gcc_full
