--- a/dune/xt/functions/CMakeLists.txt
+++ b/dune/xt/functions/CMakeLists.txt
@@ -8,7 +8,7 @@
 # Authors:
 #   Felix Schindler (2016 - 2017)
 #   René Fritze     (2016, 2018)
-#   TiKeil          (2018)
+#   Tim Keil        (2018)
 #   Tobias Leibner  (2016, 2018)
 # ~~~
 
