--- a/python/setup.cfg
+++ b/python/setup.cfg
@@ -7,7 +7,7 @@
 #          with "runtime exception" (http://www.dune-project.org/license.html)
 # Authors:
 #   Rene Fritze (2018)
-#   TiKeil      (2018)
+#   Tim Keil    (2018)
 # ~~~
 
 [aliases]
