[cmake] refactor test setup

--- a/dune/xt/test/CMakeLists.txt
+++ b/dune/xt/test/CMakeLists.txt
@@ -13,6 +13,7 @@
 
 enable_testing()
 
+dependencycheck(${xtcommon})
 
 include_directories(SYSTEM ${CMAKE_CURRENT_SOURCE_DIR}/gtest)
 dune_library_add_sources(gtest_dune_xt_common SOURCES
@@ -25,38 +26,9 @@ install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/gtest
         PATTERN "*")
 install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/main.hxx DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/xt/test/)
 
+add_subdir_tests(common)
+add_subdir_tests(grid)
+add_subdir_tests(la)
+add_subdir_tests(functions)
 
-begin_testcases(dunextgrid dunextcommon dunextla)
-
-end_testcases()
-
-add_subdirectory(common)
-add_subdirectory(grid)
-add_subdirectory(la)
-add_subdirectory(functions)
-
-if(ALBERTA_FOUND)
-  add_dune_alberta_flags(GRIDDIM 2 test_dd_glued_2d)
-  add_dune_alberta_flags(GRIDDIM 3 test_dd_glued_3d)
-
-  foreach(test ${dxt_test_binaries})
-    if(${test} MATCHES alberta_1d)
-      add_dune_alberta_flags(GRIDDIM 1 ${test})
-    elseif(${test} MATCHES alberta_2d)
-      add_dune_alberta_flags(GRIDDIM 2 ${test})
-    elseif(${test} MATCHES alberta_3d)
-      add_dune_alberta_flags(GRIDDIM 3 ${test})
-    endif()
-  endforeach()
-
-  foreach(test ${dxt_test_binaries})
-    if(${test} MATCHES 2d_simplex_alberta)
-      add_dune_alberta_flags(GRIDDIM 2 ${test})
-    elseif(${test} MATCHES 3d_simplex_alberta)
-      add_dune_alberta_flags(GRIDDIM 3 ${test})
-    endif()
-  endforeach()
-
-endif()
-
-dependencycheck(${xtcommon})
+finalize_test_setup()
