--- a/dune/xt/test/CMakeLists.txt
+++ b/dune/xt/test/CMakeLists.txt
@@ -16,9 +16,7 @@ enable_testing()
 dependencycheck(${xtcommon})
 
 include_directories(SYSTEM ${CMAKE_CURRENT_SOURCE_DIR}/gtest)
-dune_library_add_sources(gtest_dune_xt_common SOURCES
-  common.cxx
-  gtest/gtest-all.cxx)
+dune_library_add_sources(gtest_dune_xt_common SOURCES common.cxx gtest/gtest-all.cxx)
 
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/gtest
         DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/xt/test/
