--- a/dune/xt/functions/CMakeLists.txt
+++ b/dune/xt/functions/CMakeLists.txt
@@ -13,4 +13,4 @@
 # ~~~
 
 set(lib_dune_xt_functions_sources expression/mathexpr.cc)
-dune_library_add_sources(dunextfunctions SOURCES ${lib_dune_xt_functions_sources})
+dune_library_add_sources(dunext SOURCES ${lib_dune_xt_functions_sources})
