[ci] disable "misc" checks for now

--- a/.ci/azure/pipelines.yml
+++ b/.ci/azure/pipelines.yml
@@ -82,8 +82,8 @@ jobs:
     subdir: la
     module: 'dune-xt'
 
-- job: "Misc_Checks"
-  steps:
-    - bash: |
-        [[ -f ./.gitsuper ]] && echo "Please remove .gitsuper from the repo" && exit 1
-      displayName: 'Forbit .gitsuper'
+# - job: "Misc_Checks"
+#   steps:
+#     - bash: |
+#         [[ -f ./.gitsuper ]] && echo "Please remove .gitsuper from the repo" && exit 1
+#       displayName: 'Forbit .gitsuper'
