--- a/python/dune/xt/grid/CMakeLists.txt
+++ b/python/dune/xt/grid/CMakeLists.txt
@@ -12,7 +12,7 @@
 #   Tobias Leibner  (2019)
 # ~~~
 
-dune_pybindxi_add_module(_boundaryinfo EXCLUDE_FROM_ALL boundaryinfo.cc)
-dune_pybindxi_add_module(_types EXCLUDE_FROM_ALL types.cc)
-dune_pybindxi_add_module(_walker EXCLUDE_FROM_ALL walker.cc)
-dune_pybindxi_add_module(_provider EXCLUDE_FROM_ALL provider.cc)
+dune_pybindxi_add_module(_boundaryinfo LIBNAME grid_bindings EXCLUDE_FROM_ALL boundaryinfo.cc)
+dune_pybindxi_add_module(_types LIBNAME grid_bindings EXCLUDE_FROM_ALL types.cc)
+dune_pybindxi_add_module(_walker LIBNAME grid_bindings EXCLUDE_FROM_ALL walker.cc)
+dune_pybindxi_add_module(_provider LIBNAME grid_bindings EXCLUDE_FROM_ALL provider.cc)
