--- a/python/dune/xt/functions/CMakeLists.txt
+++ b/python/dune/xt/functions/CMakeLists.txt
@@ -12,15 +12,15 @@
 #   Tobias Leibner  (2019)
 # ~~~
 
-dune_pybindxi_add_module(_function_interface_1d EXCLUDE_FROM_ALL function-interface-1d.cc)
-dune_pybindxi_add_module(_function_interface_2d EXCLUDE_FROM_ALL function-interface-2d.cc)
-dune_pybindxi_add_module(_function_interface_3d EXCLUDE_FROM_ALL function-interface-3d.cc)
-dune_pybindxi_add_module(_gridfunction_interface_1d EXCLUDE_FROM_ALL gridfunction-interface-1d.cc)
-dune_pybindxi_add_module(_gridfunction_interface_2d EXCLUDE_FROM_ALL gridfunction-interface-2d.cc)
-dune_pybindxi_add_module(_gridfunction_interface_3d EXCLUDE_FROM_ALL gridfunction-interface-3d.cc)
-dune_pybindxi_add_module(_checkerboard EXCLUDE_FROM_ALL checkerboard.cc)
-dune_pybindxi_add_module(_constant EXCLUDE_FROM_ALL constant.cc)
-dune_pybindxi_add_module(_expression EXCLUDE_FROM_ALL expression.cc)
-dune_pybindxi_add_module(_function_as_grid_function EXCLUDE_FROM_ALL function-as-grid-function.cc)
-dune_pybindxi_add_module(_indicator EXCLUDE_FROM_ALL indicator.cc)
-dune_pybindxi_add_module(_spe10 EXCLUDE_FROM_ALL spe10.cc)
+dune_pybindxi_add_module(_function_interface_1d LIBNAME functions_bindings EXCLUDE_FROM_ALL function-interface-1d.cc)
+dune_pybindxi_add_module(_function_interface_2d LIBNAME functions_bindings EXCLUDE_FROM_ALL function-interface-2d.cc)
+dune_pybindxi_add_module(_function_interface_3d LIBNAME functions_bindings EXCLUDE_FROM_ALL function-interface-3d.cc)
+dune_pybindxi_add_module(_gridfunction_interface_1d LIBNAME functions_bindings EXCLUDE_FROM_ALL gridfunction-interface-1d.cc)
+dune_pybindxi_add_module(_gridfunction_interface_2d LIBNAME functions_bindings EXCLUDE_FROM_ALL gridfunction-interface-2d.cc)
+dune_pybindxi_add_module(_gridfunction_interface_3d LIBNAME functions_bindings EXCLUDE_FROM_ALL gridfunction-interface-3d.cc)
+dune_pybindxi_add_module(_checkerboard LIBNAME functions_bindings EXCLUDE_FROM_ALL checkerboard.cc)
+dune_pybindxi_add_module(_constant LIBNAME functions_bindings EXCLUDE_FROM_ALL constant.cc)
+dune_pybindxi_add_module(_expression LIBNAME functions_bindings EXCLUDE_FROM_ALL expression.cc)
+dune_pybindxi_add_module(_function_as_grid_function LIBNAME functions_bindings EXCLUDE_FROM_ALL function-as-grid-function.cc)
+dune_pybindxi_add_module(_indicator LIBNAME functions_bindings EXCLUDE_FROM_ALL indicator.cc)
+dune_pybindxi_add_module(_spe10 LIBNAME functions_bindings EXCLUDE_FROM_ALL spe10.cc)
