--- a/python/dune/xt/grid/CMakeLists.txt
+++ b/python/dune/xt/grid/CMakeLists.txt
@@ -16,3 +16,4 @@ dune_pybindxi_add_module(_boundaryinfo EXCLUDE_FROM_ALL boundaryinfo.cc)
 dune_pybindxi_add_module(_types EXCLUDE_FROM_ALL types.cc)
 dune_pybindxi_add_module(_walker EXCLUDE_FROM_ALL walker.cc)
 dune_pybindxi_add_module(_provider EXCLUDE_FROM_ALL provider.cc)
+dune_pybindxi_add_module(_grid_traits EXCLUDE_FROM_ALL traits.cc)
