[python|grid] update grid provider bindings

--- a/python/dune/xt/grid/CMakeLists.txt
+++ b/python/dune/xt/grid/CMakeLists.txt
@@ -15,5 +15,6 @@
 dune_pybindxi_add_module(_boundaryinfo EXCLUDE_FROM_ALL boundaryinfo.cc)
 dune_pybindxi_add_module(_types EXCLUDE_FROM_ALL types.cc)
 dune_pybindxi_add_module(_walker EXCLUDE_FROM_ALL walker.cc)
-dune_pybindxi_add_module(_provider EXCLUDE_FROM_ALL provider.cc)
+dune_pybindxi_add_module(_grid_gridprovider_cube EXCLUDE_FROM_ALL gridprovider/cube.cc)
+dune_pybindxi_add_module(_grid_gridprovider_provider EXCLUDE_FROM_ALL gridprovider/provider.cc)
 dune_pybindxi_add_module(_grid_traits EXCLUDE_FROM_ALL traits.cc)
