--- a/.ci/gitlab/config.yml
+++ b/.ci/gitlab/config.yml
@@ -42,7 +42,7 @@ variables:
         pip3 install -U docker jinja2 docopt
 
         export BASEIMAGE="${MY_MODULE}-testing_${DOCKER_TAG}:${CI_COMMIT_REF_NAME/\//_}"
-        export IMAGE="dunecommunity/ci_${MY_MODULE}-testing_${DOCKER_TAG}:${CI_COMMIT_SHA}"
+        export IMAGE="$CI_REGISTRY/dune-xt/ci_${MY_MODULE}-testing_${DOCKER_TAG}:${CI_COMMIT_SHA}"
         # get image with fallback to master branch of the super repo
         docker pull dunecommunity/${BASEIMAGE} || export BASEIMAGE="${MY_MODULE}-testing_${DOCKER_TAG}:master" ; docker pull dunecommunity/${BASEIMAGE}
         export ENV_FILE=${HOME}/env
@@ -59,8 +59,8 @@ variables:
 
     after_script:
       - |
-        export IMAGE="dunecommunity/ci_${MY_MODULE}-testing_${DOCKER_TAG}:${CI_COMMIT_SHA}"
-        echo $DOCKER_PW | docker login --username="$DOCKER_USER" --password-stdin
+        export IMAGE="$CI_REGISTRY/dune-xt/ci_${MY_MODULE}-testing_${DOCKER_TAG}:${CI_COMMIT_SHA}"
+        docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
         docker push ${IMAGE}
     artifacts:
       reports:
