--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -11,6 +11,10 @@
 #   Tobias Leibner  (2018, 2020)
 # ~~~
 
+# Currently, the python libraries do not have access to the config.h variables, see
+# https://github.com/dune-community/dune-xt-common/issues/120
+# The following silences all the resulting -Wundef warnings in this directory
+add_compile_options(-Wno-undef)
 add_subdirectory(dune)
 add_subdirectory(scripts)
 add_subdirectory(wrapper)
